Fix modal z-index importance

--- a/styles/style.less
+++ b/styles/style.less
@@ -22,7 +22,7 @@
   white-space: nowrap;
 }
 
-.emoji-dialog {
+.modal.emoji-dialog {
   z-index: 10500;
 
   > .modal-dialog {
